--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,30 +43,31 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //Retrofit
 implementation "com.squareup.retrofit2:retrofit:2.9.0"
 implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 //Picasso
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     //Corrutinas
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'    // en Corrutinas tiene lifecycleScope.blabla y VM
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'    // en Corrutinas tiene lifecycleScope.blabla y VM
 //dagger hilt
-    implementation 'com.google.dagger:hilt-android:2.44'
+    implementation 'com.google.dagger:hilt-android:2.44.2'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44.2'
 // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.0'
 // Google Maps
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
  //   implementation 'com.google.maps.android:android-maps-utils:2.3.0'
 //Room
-    implementation 'androidx.room:room-ktx:2.4.2'
-    implementation 'androidx.room:room-runtime:2.4.2'
-    kapt "androidx.room:room-compiler:2.4.2"
+    implementation 'androidx.room:room-ktx:2.5.2'
+    implementation 'androidx.room:room-runtime:2.5.2'
+    kapt "androidx.room:room-compiler:2.5.2"
 
 
     testImplementation 'junit:junit:4.13.2'
